# AI-reliability-app

./: .gitignore  AGENTS.md  Makefile  README.md  TEXTBOOK.md  cli.py  demo.py  setup.py  test_all.py
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/reliability_api/: main.py
apps/api/src/reliability_api/db/: clickhouse.py
apps/dashboard/: README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.tsbuildinfo
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/app/benchmarks/: page.tsx
apps/dashboard/app/reflections/: page.tsx
apps/dashboard/app/reliability/: page.tsx
apps/evaluator/: README.md  pyproject.toml
apps/evaluator/src/reliability_evaluator/: __init__.py
apps/worker/: README.md  pyproject.toml
apps/worker/src/reliability_worker/: worker.py
benchmarks/: runner.py
benchmarks/agents/: suite.py
benchmarks/memory/: stress.py
benchmarks/rag/: adversarial.py
benchmarks/tool_use/: suite.py
datasets/: agents_benchmark.json  memory_benchmark.json  rag_benchmark.json  tool_use_benchmark.json
docs/: CONTRIBUTING.md  README.md  deployment.md  sdk-guide.md  user-guide.md
examples/: basic_usage.py  framework_integrations.py  quickstart.py
infra/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.evaluator  Dockerfile.worker  docker-compose.yml  prometheus.yml
infra/kubernetes/: deployments.yaml
infra/terraform/: main.tf
tests/e2e/: test_pipeline.py
