[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reliability-api"
version = "0.1.0"
description = "AI Reliability Lab - FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "clickhouse-connect>=0.7.0",
    "aiochclient>=2.0.0",
    "celery>=5.3.0",
    "reliability-shared",
    "reliability-sdk",
    "reliability-evals",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
    "black>=23.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/reliability_api"]
