[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reliability-evaluator"
version = "0.1.0"
description = "AI Reliability Lab - Evaluator Worker"
requires-python = ">=3.10"
dependencies = [
    "reliability-shared",
    "reliability-evals",
]


[tool.hatch.build.targets.wheel]
packages = ["src/reliability_evaluator"]
